<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:text="Microsoft teams "
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="201dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/teamslogo" />

        <!-- Username/Email field -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_email"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_email"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/edittext_password"
    android:layout_marginTop="30dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


        <Button
            android:id="@+id/button_signin"
            android:layout_width="302dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:onClick="sign_in"
            />

        <TextView
            android:id="@+id/textview_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />


            <Button
                android:id="@+id/signbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/signup" />

        </LinearLayout>
</RelativeLayout>
        <Button
            android:id="@+id/changelang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/smalllang"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="12dp"
            android:text="@string/changelangbtn"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>